[gd_scene load_steps=11 format=3 uid="uid://dni5wk8jvehtm"]

[ext_resource type="Script" uid="uid://coftsvv07lou2" path="res://Scripts/lose_screen.gd" id="1_6xaih"]
[ext_resource type="FontFile" uid="uid://b3tw7nv8s1k8f" path="res://Assets/fonts/CyberpunkCraftpixPixel (1).otf" id="1_f7j0d"]
[ext_resource type="Theme" uid="uid://dajd6m3itkm0f" path="res://Assets/Themes/Buttons Theme/Button Green/ButtonTheme2.tres" id="3_kwvfs"]
[ext_resource type="Texture2D" uid="uid://dqqo6kyor0las" path="res://Assets/sprites/buttons/Icons/Icon_34.png" id="4_3bpbr"]
[ext_resource type="Theme" uid="uid://cupg8yu6xnd0k" path="res://Assets/Themes/Buttons Theme/Buttons Red/ButtonTheme3.tres" id="5_3bpbr"]
[ext_resource type="Texture2D" uid="uid://bgw4rxvtkt70t" path="res://Assets/sprites/buttons/Icons/Icon_35.png" id="6_22qra"]
[ext_resource type="Texture2D" uid="uid://douqey6a54hrx" path="res://Assets/sprites/backgrounds/black.png" id="7_22qra"]

[sub_resource type="Animation" id="Animation_i78rd"]
resource_name = "Fade_out"
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 1),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Color(1, 1, 1, 1), Color(1, 1, 1, 0)]
}

[sub_resource type="Animation" id="Animation_iux8h"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Color(1, 1, 1, 1)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_meeha"]
_data = {
&"Fade_out": SubResource("Animation_i78rd"),
&"RESET": SubResource("Animation_iux8h")
}

[node name="LoseScreen" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_6xaih")

[node name="Background" type="ColorRect" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2
color = Color(0, 0, 0, 1)

[node name="Center" type="VBoxContainer" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -350.0
offset_top = -145.0
offset_right = 350.0
offset_bottom = 145.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/separation = -40

[node name="Game Over" type="RichTextLabel" parent="Center"]
custom_minimum_size = Vector2(700, 150)
layout_mode = 2
theme_override_colors/font_shadow_color = Color(0.94509804, 0, 0, 1)
theme_override_constants/shadow_outline_size = 3
theme_override_fonts/normal_font = ExtResource("1_f7j0d")
theme_override_font_sizes/normal_font_size = 64
bbcode_enabled = true
text = "[center][shake]HAS PERDIDO
[/shake][/center]"

[node name="Score" type="RichTextLabel" parent="Center"]
custom_minimum_size = Vector2(700, 75)
layout_mode = 2
theme_override_fonts/normal_font = ExtResource("1_f7j0d")
theme_override_font_sizes/normal_font_size = 24
bbcode_enabled = true
text = "[center][wave]
PREGUNTAS CONTESTADAS
[/wave][/center]"

[node name="Correct" type="RichTextLabel" parent="Center"]
custom_minimum_size = Vector2(700, 75)
layout_mode = 2
theme_override_fonts/normal_font = ExtResource("1_f7j0d")
theme_override_font_sizes/normal_font_size = 24
bbcode_enabled = true
text = "[center][wave]
CORRECTAS: 0
[/wave][/center]"

[node name="Wrong" type="RichTextLabel" parent="Center"]
custom_minimum_size = Vector2(700, 75)
layout_mode = 2
theme_override_fonts/normal_font = ExtResource("1_f7j0d")
theme_override_font_sizes/normal_font_size = 24
bbcode_enabled = true
text = "[center][wave]
ERRADAS: 0
[/wave][/center]"

[node name="Buttons" type="HBoxContainer" parent="."]
custom_minimum_size = Vector2(60, 60)
layout_mode = 1
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -45.0
offset_top = -96.0
offset_right = 59.0
offset_bottom = -36.0
grow_horizontal = 2
grow_vertical = 0
theme_override_constants/separation = 12

[node name="PlayAgain" type="Button" parent="Buttons"]
custom_minimum_size = Vector2(50, 50)
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 4
theme = ExtResource("3_kwvfs")
icon = ExtResource("4_3bpbr")
icon_alignment = 1
expand_icon = true

[node name="ExitMenu" type="Button" parent="Buttons"]
custom_minimum_size = Vector2(50, 50)
layout_mode = 2
size_flags_vertical = 4
theme = ExtResource("5_3bpbr")
icon = ExtResource("6_22qra")
icon_alignment = 1
expand_icon = true

[node name="Timer" type="Timer" parent="."]
wait_time = 60.0
one_shot = true
autostart = true

[node name="Black" type="Sprite2D" parent="."]
position = Vector2(307.00003, 246)
scale = Vector2(1.2739273, 1.2089888)
texture = ExtResource("7_22qra")

[node name="AnimationPlayer" type="AnimationPlayer" parent="Black"]
libraries = {
&"": SubResource("AnimationLibrary_meeha")
}
autoplay = "Fade_out"

[connection signal="pressed" from="Buttons/PlayAgain" to="." method="_on_button_pressed"]
[connection signal="pressed" from="Buttons/PlayAgain" to="." method="_on_play_again_pressed"]
[connection signal="pressed" from="Buttons/ExitMenu" to="." method="_on_exit_menu_pressed"]
[connection signal="timeout" from="Timer" to="." method="_on_timer_timeout"]
